# funparse

./: LICENSE  README.md  README.md.jinja  pyproject.toml
examples/: 01_basic_usage.py  02_printing_help.py  03_booleans.py  04_enums.py  05_bypassing_the_cli.py  06_custom_argument_parser.py  07_help_from_docstrings.py  08_help_from_annotations.py  09_variadic_positional_arguments.py
funparse/: api.py
sigparse/: api.py
